--- a/index.html
+++ b/index.html
@@ -14,17 +14,17 @@
 
 <body>
   <div class="video">
-    <video src="../video/video.mp4" autoplay muted loop></video>
+    <video src="./video/video.mp4" autoplay muted loop></video>
     <div class="mascara"></div>
   </div>
   <div class="principal">
-    <img src="../imagens/logo.png" alt="logo" class="logo">
+    <img src="./imagens/logo.png" alt="logo" class="logo">
     <p>Encanadores Mario & Luigi - Resolvendo Seus Problemas com Estilo!</p>
     <p>Você já se econtrou em uma situação de emergência com encanamento? Vazamentos inesperado, canos estúpidos ou torneiras que não param de pingar? Não se preocupe, porque estamos aqui para salvar o dia! Apresentamos a Vocês os encanadores mais famosos do Reino dos Cogumelos - Mario e Luigi!</p>
     <button onclick="cliqueiNoBotao()">Fale conosco</button>
   </div>
   <div>
-    <img src="../imagens/mario.png" alt="logo-Mario e Luigi" class="mario-luigi">
+    <img src="./imagens/mario.png" alt="logo-Mario e Luigi" class="mario-luigi">
   </div>
   <form class="fale-conosco" action="https://formsubmit.co/caiohenrique6569@gmail.com" method="POST">
     <input type="text" placeholder="Seu nome">
